Meta is immutable.
(cherry picked from commit 029baeb25b2a7659373cb03ab89269a76f5c44d2)